--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.1",
     "@supabase/supabase-js": "^2.51.0",
     "leaflet": "1.9.4",
-    "react-leaflet": "4.2.1"
+    "react-leaflet": "4.2.1",
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
