--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.44.4",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "@google/genai": "^0.2.1"
+    "@google/genai": "*"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
