feat: integrate external attendance data and rename app to Herramienta de Proyecto y Gestion Gamificada

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Taller",
-  "name": "Maestros del Taller",
+  "name": "Herramienta de Proyecto y Gestion Gamificada",
   "icons": [
     {
       "src": "https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png",
